# anima

./: .babelrc  .env  .gitignore  .ic-assets.json  .ic-assets.json5  .npmrc  .yarnrc.yml  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  asset-manifest.json  babel.config.js  build.sh  canister_ids.json  canister_settings.json  check-cycles.sh  check-deploy.sh  chmod-deploy.sh  clean-install.sh  clean-rebuild.sh  clean.sh  cleanup-package-manager.sh  cleanup.sh  copy_did.sh  create-and-write.sh  create-directories.sh  create-full-structure.sh  create-structure.sh  debug-build.sh  debug-live.sh  deploy-anima.sh  deploy-config.sh  deploy-frontend-safe.sh  deploy-frontend.sh  deploy-full.sh  deploy-ic.sh  deploy-live.sh  deploy-mainnet.sh  deploy-optimized.sh  (+50 more)
.backup_20241227_232415/: Cargo.toml
.backup_20241227_232415/src/: error.rs  lib.rs  lib.rs.bak9  personality.rs
.backup_20241227_232415/src/analytics/: AlertsMonitor.ts
.backup_20241227_232415/src/components/admin/: AdminMetrics.tsx  AlertsMonitor.tsx
.backup_20241227_232415/src/components/admin/dashboard/: AlertsPanel.tsx  SystemHealth.tsx
.backup_20241227_232415/src/components/anima/: MintAnima.jsx
.backup_20241227_232415/src/components/auth/: AdminRoute.tsx
.backup_20241227_232415/src/components/payments/: PaymentErrorBoundary.tsx  PaymentModal.tsx
.backup_20241227_232415/src/components/personality/: DimensionalMap.tsx  EmotionalState.tsx  PersonalityVisualization.tsx  QuantumTraits.tsx
.backup_20241227_232415/src/components/quantum-vault/: QuantumVault.jsx
.backup_20241227_232415/src/components/ui/: NeuralGrid.jsx
.backup_20241227_232415/src/contexts/: auth-context.tsx
.backup_20241227_232415/src/memory/: formation.rs
.backup_20241227_232415/src/nft/: types.rs
.backup_20241227_232415/src/personality/: consciousness.rs
.backup_20241227_232415/src/services/: MetricsService.ts
.backup_20241227_232415/src/types/: admin.ts  ledger.ts  nft.rs  payment.ts  personality.rs  realtime.ts
.backup_20241227_232415/src/utils/: auth.ts
.cargo/: config.toml
.deployment_backup_20241227_222225/: Cargo.toml
.deployment_backup_20241228_072307/: canister_ids.json
canister_backup/: anima.did  index.js  service.did.d.ts  service.did.js
canister_backup/20241226_175936/: Cargo.toml
canisters/payment_verification/: Cargo.toml
docs/: admin-dashboard.md
src/: App.jsx  (+33 more)
(+497 files in other folders)
