[package]
name = "anima"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.11"
ic-cdk-macros = "0.7"
ic-cdk-timers = "0.4"
ic-stable-structures = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[profile.release]
panic = 'abort'
opt-level = 'z'
lto = true
codegen-units = 1
debug = false