[package]
name = "anima"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.9"
ic-cdk = "0.11"
ic-cdk-timers = "0.5"
ic-cdk-macros = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5"
rand = "0.8"
getrandom = { version = "0.2", features = ["custom"] }
num-traits = "0.2"

[lib]
crate-type = ["cdylib"]