[package]
name = "payment_verification"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { version = "0.9.11", features = ["parser"] }
ic-cdk = "0.11.6"
ic-cdk-macros = "0.8.1"
ic-stable-structures = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-ledger-types = "0.8.0"
sha2 = "0.10.8"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]